--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,14 +5,36 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   }, 
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.3",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
+    "pg": "^8.4.1",
+    "tsyringe": "^4.3.0",
+    "typeorm": "^0.2.28",
+    "uuidv4": "^6.2.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "ts-node-dev": "^1.0.0"
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.0",
+    "ts-jest": "^26.4.1",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0"
   }
 }
