--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest"
-  }, 
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/multer": "^1.4.4",
     "jest": "^26.6.0",
     "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0",
